<resources>
    <string name="a_new_device_can_access_your_encrypted_data">A new device can access your encrypted data</string>
    <string name="a_new_device_ps_signed_in_to_your_samsung_account">"A new device (%s) signed in to your Samsung account. It can access your encrypted data. If this wasn't you, change your Samsung account password right away."</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Samsung Cloud Assistant</string>
    <string name="appbar_base_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="assess_blocked_description">For security, access to Enhanced data protection settings is blocked because an incorrect recovery code was entered too many times.</string>
    <string name="assess_blocked_title">Access blocked</string>
    <string name="before_encrypting_your_data">Before encrypting your data, you need to generate a recovery code. This code can be used to recover your data if you lose access to your trusted devices.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="call_and_text_on_your_tablet">Call and text on your tablet</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cant_use_enhanced_data_protection">"Can't use Enhanced data protection"</string>
    <string name="cant_use_enhanced_data_protection_because_of_your_account">"Can't use Enhanced data protection because of your account country or region."</string>
    <string name="cant_use_this_app_with_a_samsung_account_for_business">"Can't use this app with a Samsung account for business."</string>
    <string name="chan_mkt">Marketing</string>
    <string name="chan_ntc">Notice</string>
    <string name="change_recovery_code">Change recovery code</string>
    <string name="change_your_recovery_code_if_its_lost">"Change your recovery code if it's lost or you think someone has it."</string>
    <string name="changing_recovery_code">Changing recovery code...</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="checking_phone_info">Checking phone info...</string>
    <string name="checking_tablet_info">Checking tablet info...</string>
    <string name="clear_data_dlg_text">"All of this application's data will be deleted permanently. This includes all files, settings, accounts, databases etc."</string>
    <string name="clear_dlg_ok">Clear</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_app">Close app</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="confirm_recovery_code">Confirm your recovery code</string>
    <string name="connect_to_a_wifi_or_mobile_network_and_try_again">Connect to a Wi-Fi or mobile network and try again.</string>
    <string name="continue_apps_from_one_device_to_the_other">Continue apps from one device to the other</string>
    <string name="control_your_phone_with_your_tablets_keyboard_and_mouse">Control your phone with your tablet’s keyboard and mouse</string>
    <string name="copy">Copy</string>
    <string name="copy_your_recovery_code">Copy your recovery code</string>
    <string name="couldnt_change_recovery_code">"Couldn't change recovery code"</string>
    <string name="couldnt_load_settings">"Couldn't load settings"</string>
    <string name="couldnt_turn_off_encrypt_backup_data">"Couldn't turn off Encrypt backup data"</string>
    <string name="couldnt_turn_off_encrypt_synced_data">"Couldn't turn off Encrypt synced data"</string>
    <string name="couldnt_turn_on_encrypt_backup_data">"Couldn't turn on Encrypt backup data"</string>
    <string name="couldnt_turn_on_encrypt_synced_data">"Couldn't turn on Encrypt synced data"</string>
    <string name="default_web_client_id">426220903470-kdt2l2bsjj986kd08ab1nah15dhk31mk.apps.googleusercontent.com</string>
    <string name="dest_title">destination title</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="dont_have_your_recovery_code_q">"Don't have your recovery code?"</string>
    <string name="download">Download</string>
    <string name="dragndroplist_drag_move">Now at position %d.</string>
    <string name="dragndroplist_drag_release">Item dropped into position %d.</string>
    <string name="dragndroplist_drag_start">Started dragging item at position %d.</string>
    <string name="dragndroplist_item_cannot_be_dragged">Item at position %d cannot be dragged.</string>
    <string name="empty_str" />
    <string name="encrypt_backup_data">Encrypted backup data</string>
    <string name="encrypt_sync_data">Encrypted sync data</string>
    <string name="encryption_key_needed_to_use_ps">Encryption key needed to use %s</string>
    <string name="enhanced_data_protection">Enhanced data protection</string>
    <string name="enter_your_recovery_code">Enter your recovery code</string>
    <string name="enter_your_recovery_code_to_confirm">Enter your recovery code to conﬁrm you can recover your data if you need to.</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="ev_recover_dialog_cancel_button_text">Recovery code</string>
    <string name="ev_recover_dialog_ok_button_text">Screen lock</string>
    <string name="ev_recover_dialog_text">Use your screen lock or recovery code to recover your encrypted data?</string>
    <string name="ev_setup_cancel_button_text">Not now</string>
    <string name="ev_setup_description">A screen lock is easier to remember than a recovery code, so this makes it easier to recover your encrypted data.</string>
    <string name="ev_setup_ok_button_text">Allow</string>
    <string name="ev_setup_title">Allow your screen lock to be used to recover encrypted data?</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="for_security_you_cant_access_enhanced_data_protection_phone">"For security, you can't access Enhanced data protection settings on a phone that's been rooted or changed in an unauthorized way."</string>
    <string name="for_security_you_cant_access_enhanced_data_protection_tablet">"For security, you can't access Enhanced data protection settings on a tablet that's been rooted or changed in an unauthorized way."</string>
    <string name="gcm_defaultSenderId">426220903470</string>
    <string name="if_you_re_in_the_middle_of_a_task_on_your_phone">"If you're in the middle of a task on your phone, you can continue on your tablet by tapping the icon that appears on the Recents screen. It also works from your tablet to your phone."</string>
    <string name="multi_control_lets_you_use_a_single_keyboard">Multi control lets you use a single keyboard and mouse to control your phone and tablet. You can even copy and paste or drag things between them like they’re one device.</string>
    <string name="send_pictures_videos_and_documents_from_your_phone">Send pictures, videos, and documents from your phone to your tablet or from your tablet to your phone using Quick Share.</string>
    <string name="share_files_easily">Share files easily</string>
    <string name="use_your_tablet_to_make_and_answer_calls_and_send_and_receive_texts">"Use your tablet to make and answer calls and send and receive texts using your phone's number and mobile plan."</string>
</resources>